shmuel 30.01.2014 11:20:16 +0200 - build 281

1. LuaFAR: откат билда 279 (сломалось получение пустых строк).

shmuel 29.01.2014 18:46:57 +0200 - build 280

1. Мелкий рефакторинг.

zg 29.01.2014 14:10:34 +0200 - build 279

1. LuaFAR: уточнение 276 - для несуществующих элементов DM_GETTEXT возвращает nil.

shmuel 29.01.2014 09:42:12 +0200 - build 278

1. Откат изменения DM_LISTGETCURPOS предыдущего коммита.

shmuel 28.01.2014 23:23:52 +0200 - build 277

1. LuaFAR: уточнения в DM_GETCONSTTEXTPTR и DM_LISTGETCURPOS.

zg 28.01.2014 12:07:51 +0200 - build 276

1. LuaFAR: DM_GETTEXT для несуществующих элементов диалога возвращало мусор.

shmuel 28.01.2014 01:28:32 +0200 - build 275

1. LuaFAR: работали скрипты с двумя BOM'ами (один удалял LuaFAR, второй - LuaJIT).

shmuel 24.01.2014 20:19:11 +0200 - build 274

1. LuaFAR: M#2572: far.MakeMenuItems: добавлять в таблицу не только строковое представление, но и сами объекты.

2. LuaFAR: M#2573: far.Show: возвращать выбранный пункт меню.

shmuel 21.01.2014 22:03:31 +0200 - build 273

1. LuaFAR (far.Message): добавлен флаг 'n', означающий "не делать свёртку длинных строк".

shmuel 18.01.2014 13:18:11 +0200 - build 272

1. M#2561: far.MacroPost: возможность задавать SequenceText функцией (а не строкой).
   Добавлена функция mf.postmacro.

shmuel 14.01.2014 11:15:34 +0200 - build 271

1. Адаптация к Far 3.0.3770 ("рефакторинг в системе макросов").

shmuel 12.01.2014 20:21:37 +0200 - build 270

1. LuaFAR (far.MacroAdd) - доработка build 150:
   -- Callback(Id,Flags) получает первым параметром не число, а light userdata.

shmuel 10.01.2014 16:45:19 +0200 - build 269

1. LuaFAR-плагины, собираемые GCC:
   автоматическое включение экспорта FreeFindDataW при наличии GetFindDataW.

shmuel 07.01.2014 11:00:53 +0200 - build 268

1. Кастомная сортировка: косметика.

shmuel 06.01.2014 17:09:29 +0200 - build 267

1. Кастомная сортировка: возможность указания функции сортировки при загрузке режима сортировки.
